--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>E-Learning Courses</title>
-    <link rel="stylesheet" href="/static/style.css">
-</head>
-<body>
-    <h1>Available Courses</h1>
-    <ul>
-        {% for course in courses %}
-        <li><a href="/course/{{ course.id }}">{{ course.title }}</a></li>
-        {% endfor %}
-    </ul>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>greytHR Leave Management System</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
 </html>
->
